--- a/connor-andre-phase2-project/src/Components/App.css
+++ b/connor-andre-phase2-project/src/Components/App.css
@@ -40,3 +40,34 @@
 .read-the-docs {
   color: #888;
 }
+
+ /* main {
+  background-color: #f5f7fa;
+  height: 100vh;
+  width: 100%;
+  font-family: 'Roboto', sans-serif;
+} */
+
+
+.stock-info {
+  width: 48vw;
+  height: 35vh;
+  margin-bottom: 10%;
+}
+
+.likes {
+  margin: 10%;
+}
+
+img {
+  width: 48vw;
+  height: 35vh;
+  background: url('../images/profile.jpg') center center / cover;
+  border-radius: 10px;
+  display: flex;
+  align-items: flex-end;
+  color: #eee;
+  box-shadow: 0 2px 10px 0 rgba(136,136,136,0.7);
+  -webkit-box-shadow: 0 2px 10px 0 rgba(136,136,136,0.7);
+  -moz-box-shadow: 0 2px 10px 0 rgba(136,136,136,0.7);
+}
