--- a/connor-andre-phase2-project/src/Components/index.css
+++ b/connor-andre-phase2-project/src/Components/index.css
@@ -1,4 +1,90 @@
-:root {
+nav {
+  display: flex;
+  width: 100%;
+  justify-content: space-around;  
+  padding: 10px 0;
+  height: 44px;
+  font-size: 1.5rem;
+}
+
+
+ /* main {
+  background-color: #f5f7fa;
+  height: 100vh;
+  width: 100%;
+  font-family: 'Roboto', sans-serif;
+} */
+
+
+.stock-pic {
+  height: calc(100% - 44px);
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
+.stock-info {
+  height: calc(100% - 44px);
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+p {
+  max-width: 50%;
+}
+
+.likes-button {
+  background: #fff;
+  box-shadow: 0 2px 6px 0 rgba(112, 125, 134, 0.14);
+  height: 60px;
+  width: 60px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  border-radius: 50%;
+  font-size: 2rem;
+  transition: transform 500ms ease;
+  
+}
+button {
+  color: red;
+  
+}
+
+img {
+  width: 48vw;
+  height: 35vh;
+  background: url('../images/profile.jpg') center center / cover;
+  border-radius: 10px;
+  display: flex;
+  align-items: flex-end;
+  color: #eee;
+  box-shadow: 0 2px 10px 0 rgba(136,136,136,0.7);
+  -webkit-box-shadow: 0 2px 10px 0 rgba(136,136,136,0.7);
+  -moz-box-shadow: 0 2px 10px 0 rgba(136,136,136,0.7);
+}
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+/* :root {
   font-family: Inter, system-ui, Avenir, Helvetica, Arial, sans-serif;
   line-height: 1.5;
   font-weight: 400;
@@ -65,4 +151,4 @@ button:focus-visible {
   button {
     background-color: #f9f9f9;
   }
-}
+} */
