--- a/connor-andre-phase2-project/src/Components/index.css
+++ b/connor-andre-phase2-project/src/Components/index.css
@@ -1,3 +1,7 @@
+html {
+  background-color: #ffffff;
+}
+
 nav {
   display: flex;
   width: 100%;
@@ -5,55 +9,110 @@ nav {
   padding: 10px 0;
   height: 44px;
   font-size: 1.5rem;
+  background-color: white;
+  margin-bottom: 20px;
+}
+
+svg {
+  color: rgb(198, 42, 7);
+  font-size:150%;
+  margin: 10%;
 }
 
 
- /* main {
-  background-color: #f5f7fa;
-  height: 100vh;
+/* SavedStocks */
+
+.saved-list {
   width: 100%;
-  font-family: 'Roboto', sans-serif;
-} */
+}
+
+.matches {
+  display: flex;
+  flex-wrap: wrap;
+}
+
+.main-pic {
+  padding: 3%;
+  margin: 2%;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  border: #efefef solid;
+  box-shadow: 0 2px 6px 0 rgba(112, 125, 134, 0.14);
+  border-width: thick;
+  border-radius: 20px;
+}
+
+.pic {
+  /* width: 75%;
+  height: 75%; */
+  border: none;
+}
+
+.saved-details {
+  font-size: medium;
+  width: 318px;
+  /* height: 75%; */
+}
+
+
+
+/* SearchBar */
+
+.search-bar {
+  display: flex;
+  width: 100%;
+}
+
+.prompt {
+  margin-top: 5%;
+  height: 5vh;
+  width: 40vh;
+  font-size: x-large;
+  border-radius: 2%;
+  
+}
+
+
+
+/* StockCard */
 
 
 .stock-pic {
-  height: calc(100% - 44px);
+  padding: 3%;
+  width: 30%;
+  margin: 2%;
   display: flex;
   flex-direction: column;
   align-items: center;
-}
-
-.stock-info {
-  height: calc(100% - 44px);
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-}
-p {
-  max-width: 50%;
-}
-
-.likes-button {
-  background: #fff;
+  border: #efefef solid;
   box-shadow: 0 2px 6px 0 rgba(112, 125, 134, 0.14);
-  height: 60px;
-  width: 60px;
+  border-width: thick;
+  border-radius: 20px;
+}
+
+.stock-details {
+  max-width: 80%;
+  margin: 10%;
+  height: calc(100% - 44px);
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+}
+
+h2 {
+  width: 100%;
+  font-size: 30px;
   display: flex;
   align-items: center;
   justify-content: center;
-  border-radius: 50%;
-  font-size: 2rem;
-  transition: transform 500ms ease;
-  
-}
-button {
-  color: red;
-  
 }
 
 img {
-  width: 48vw;
-  height: 35vh;
+  width: 30vw;
+  height: 30vh;
+  padding: 3%;
   background: url('../images/profile.jpg') center center / cover;
   border-radius: 10px;
   display: flex;
@@ -63,6 +122,94 @@ img {
   -webkit-box-shadow: 0 2px 10px 0 rgba(136,136,136,0.7);
   -moz-box-shadow: 0 2px 10px 0 rgba(136,136,136,0.7);
 }
+
+.stock-profile {
+  width: 100%;
+  background-color: white;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+}
+
+.stock-welcome {
+  width: 100%;
+  padding: 3%;
+  margin: 2%;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  border: #efefef solid;
+  box-shadow: 0 2px 6px 0 rgba(112, 125, 134, 0.14);
+  border-width: thick;
+  border-radius: 20px;
+}
+.stock-welcome-info {
+  margin-bottom: 5%;
+  max-width: 40%;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  font-size: x-large;
+}
+
+
+/* .stock-page {
+  height: calc(100% - 44px);
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+
+} */
+
+/* 
+.likes-button {
+  background: #fff;
+  box-shadow: 0 2px 6px 0 rgba(112, 125, 134, 0.14);
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  border-radius: 50%;
+  font-size: 2rem;
+  transition: transform 500ms ease;
+} */
+
+.buttons {
+  display: flex;
+  flex: auto;
+  justify-content: space-evenly;
+  align-items: center;
+  margin-inline: 1px;
+  margin-left: -3%;
+  margin-top: -5%;
+ 
+}
+
+.like {
+  margin: 100%;
+  height: 48px;
+  width: 48px;
+  font-size: 3rem;
+  border: none;
+  background: white;
+
+}
+
+.dislike {
+  margin: 100%;
+  height: 48px;
+  width: 48px;
+  font-size: 3rem;
+  border: none;
+  background: white;
+
+
+}
+
+
 
 
 
