--- a/connor-andre-phase2-project/src/Components/index.css
+++ b/connor-andre-phase2-project/src/Components/index.css
@@ -5,7 +5,7 @@ html {
 nav {
   display: flex;
   width: 100%;
-  justify-content: space-around;  
+  justify-content: space-evenly;  
   padding: 10px 0;
   height: 44px;
   font-size: 1.5rem;
@@ -17,6 +17,13 @@ svg {
   color: rgb(198, 42, 7);
   font-size:150%;
   margin: 10%;
+}
+svg:hover {
+  transform: translateY(-3px);
+}
+svg:active {
+  box-shadow: rgba(0, 0, 0, .06) 0 2px 4px;
+  transform: translateY(0);
 }
 
 
@@ -58,10 +65,11 @@ svg {
 
 
 /* SearchBar */
-
-.search-bar {
+.search-container {
   display: flex;
-  width: 100%;
+  align-items: center;
+  justify-content: center;
+
 }
 
 .prompt {
@@ -70,8 +78,15 @@ svg {
   width: 40vh;
   font-size: x-large;
   border-radius: 2%;
-  
 }
+
+.search-results {
+  display: block
+}
+
+
+
+
 
 
 
@@ -133,25 +148,32 @@ img {
 }
 
 .stock-welcome {
-  width: 100%;
-  padding: 3%;
+  padding: 2%;
   margin: 2%;
   display: flex;
   flex-direction: column;
   align-items: center;
   border: #efefef solid;
-  box-shadow: 0 2px 6px 0 rgba(112, 125, 134, 0.14);
-  border-width: thick;
   border-radius: 20px;
 }
 .stock-welcome-info {
   margin-bottom: 5%;
-  max-width: 40%;
+  width: 70%;
   display: flex;
   flex-direction: column;
   align-items: center;
   justify-content: center;
   font-size: x-large;
+}
+
+.welcome-button {
+  display: flex;
+  height: 48px;
+  width: 48px;
+  font-size: 3rem;
+  border: none;
+  background: white;
+
 }
 
 
@@ -195,7 +217,9 @@ img {
   font-size: 3rem;
   border: none;
   background: white;
-
+}
+.like:hover {
+  transform: translateY(-5px);
 }
 
 .dislike {
@@ -205,97 +229,108 @@ img {
   font-size: 3rem;
   border: none;
   background: white;
-
-
+}
+.dislike:hover {
+  transform: translateY(-5px);
 }
 
 
 
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-/* :root {
-  font-family: Inter, system-ui, Avenir, Helvetica, Arial, sans-serif;
-  line-height: 1.5;
-  font-weight: 400;
-
-  color-scheme: light dark;
-  color: rgba(255, 255, 255, 0.87);
-  background-color: #242424;
-
-  font-synthesis: none;
-  text-rendering: optimizeLegibility;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
-}
-
-a {
-  font-weight: 500;
-  color: #646cff;
-  text-decoration: inherit;
-}
-a:hover {
-  color: #535bf2;
-}
-
-body {
-  margin: 0;
-  display: flex;
-  place-items: center;
-  min-width: 320px;
-  min-height: 100vh;
-}
-
-h1 {
-  font-size: 3.2em;
-  line-height: 1.1;
-}
-
-button {
-  border-radius: 8px;
+.button-4 {
+  align-items: center;
+  background-clip: padding-box;
+  background-color: rgb(231, 13, 96);
   border: 1px solid transparent;
-  padding: 0.6em 1.2em;
-  font-size: 1em;
-  font-weight: 500;
-  font-family: inherit;
-  background-color: #1a1a1a;
+  border-radius: .25rem;
+  box-shadow: rgba(0, 0, 0, 0.02) 0 1px 3px 0;
+  box-sizing: border-box;
+  color: #fff;
   cursor: pointer;
-  transition: border-color 0.25s;
-}
-button:hover {
-  border-color: #646cff;
-}
-button:focus,
-button:focus-visible {
-  outline: 4px auto -webkit-focus-ring-color;
+  display: inline-flex;
+  font-family: system-ui,-apple-system,system-ui,"Helvetica Neue",Helvetica,Arial,sans-serif;
+  font-size: 16px;
+  font-weight: 600;
+  justify-content: center;
+  line-height: 1.25;
+  margin: 0px;
+  min-height: 2rem;
+  padding: calc(.875rem - 1px) calc(1.5rem - 1px);
+  position: relative;
+  text-decoration: none;
+  transition: all 250ms;
+  user-select: none;
+  -webkit-user-select: none;
+  touch-action: manipulation;
+  vertical-align: baseline;
+  width: auto;
 }
 
-@media (prefers-color-scheme: light) {
-  :root {
-    color: #213547;
-    background-color: #ffffff;
-  }
-  a:hover {
-    color: #747bff;
-  }
-  button {
-    background-color: #f9f9f9;
-  }
-} */
+.button-4:hover,
+.button-4:focus {
+  background-color: #fb8332;
+  box-shadow: rgba(0, 0, 0, 0.1) 0 4px 12px;
+}
+
+.button-4:hover {
+  transform: translateY(-1px);
+}
+
+.button-4:active {
+  background-color: #c85000;
+  box-shadow: rgba(0, 0, 0, .06) 0 2px 4px;
+  transform: translateY(0);
+}
+
+
+
+.button-5 {
+  align-items: center;
+  background-clip: padding-box;
+  background-color: rgb(231, 13, 96);
+  border: 1px solid transparent;
+  border-radius: .25rem;
+  box-shadow: rgba(0, 0, 0, 0.02) 0 1px 3px 0;
+  box-sizing: border-box;
+  color: #fff;
+  cursor: pointer;
+  display: inline-flex;
+  font-family: system-ui,-apple-system,system-ui,"Helvetica Neue",Helvetica,Arial,sans-serif;
+  font-size: 16px;
+  font-weight: 600;
+  justify-content: center;
+  line-height: 1.25;
+  margin: 0;
+  min-height: 3rem;
+  padding: calc(.875rem - 1px) calc(1.5rem - 1px);
+  position: relative;
+  text-decoration: none;
+  transition: all 250ms;
+  user-select: none;
+  -webkit-user-select: none;
+  touch-action: manipulation;
+  vertical-align: baseline;
+  width: auto;
+}
+
+.button-5:hover,
+.button-5:focus {
+  background-color: #fb8332;
+  box-shadow: rgba(0, 0, 0, 0.1) 0 4px 12px;
+}
+
+.button-5:hover {
+  transform: translateY(-1px);
+}
+
+.button-5:active {
+  background-color: #c85000;
+  box-shadow: rgba(0, 0, 0, .06) 0 2px 4px;
+  transform: translateY(0);
+}
+
+
+
+
+
+
+
