metrics changed and css

--- a/connor-andre-phase2-project/src/Components/index.css
+++ b/connor-andre-phase2-project/src/Components/index.css
@@ -84,7 +84,6 @@ svg:active {
   font-weight: 600;
   justify-content: center;
   line-height: 1.25;
-  margin: 0px;
   min-height: 2rem;
   position: relative;
   text-decoration: none;
@@ -145,7 +144,7 @@ svg:active {
 
 .stock-details-container {
   margin-top: 10%;
-  margin-bottom: 10%;
+  margin-bottom: 5%;
 
 }
 
@@ -183,6 +182,7 @@ svg:active {
 .stock-sic {
   text-align: center;
   display: flex;
+  justify-content: center;
   flex-direction: column;
   font-family: Garamond;
   font-size: 100%;
@@ -217,9 +217,12 @@ svg:active {
   font-weight: bold;
 }
 
+.stock-bio {
+  margin: 5%
+}
+
 .stock-description{ 
   text-align: center;
-
 }
 
 
@@ -299,17 +302,55 @@ img {
 /*Metrics Page*/
 
 .metrics-container{
-  margin-top: 30%;
+  margin-top: 20%;
   display: flex;
   flex-direction: column;
   align-items: center;
   justify-content: center;
+  width: 100%;
 }
 
 .metrics {
+
+  font-family:'Times New Roman', Times, serif;
   padding: 2%;
   color: rgb(198, 42, 7);
+}
 
+.click-website {
+  font-style: italic;
+  text-decoration: underline;
+  color: rgb(198, 42, 7);
+  margin-top: -5%;
+  margin-bottom: 5%;
+}
+
+.back-button {
+  align-items: center;
+  background-clip: padding-box;
+  background-color: rgb(198, 42, 7);
+  border: 1px solid transparent;
+  border-radius: .25rem;
+  box-shadow: rgba(0, 0, 0, 0.02) 0 1px 3px 0;
+  box-sizing: border-box;
+  color: #fff;
+  cursor: pointer;
+  display: inline-flex;
+  font-family: system-ui,-apple-system,system-ui,"Helvetica Neue",Helvetica,Arial,sans-serif;
+  font-size: 10px;
+  font-weight: 600;
+  justify-content: center;
+  line-height: 1.25;
+  min-height: 2rem;
+  position: relative;
+  text-decoration: none;
+  transition: all 250ms;
+  user-select: none;
+  -webkit-user-select: none;
+  touch-action: manipulation;
+  vertical-align: baseline;
+  width: auto;
+  margin-top: 5%;
 }
 
 
@@ -334,7 +375,7 @@ img {
   align-items: center;
   justify-content: center;
   border-radius: 50%;
-  transition: transform 500ms ease;
+
 }
 
 .dislike-button {
@@ -348,7 +389,7 @@ img {
   justify-content: center;
   padding: 1%;
   border-radius: 50%;
-  transition: transform 500ms ease;
+ 
 }
 
 .like {
@@ -360,18 +401,14 @@ img {
   
 }
 
-.like:hover {
-  transform: translateY(-5px);
-}
 
 .dislike {
 
-  height: 48px;
-  width: 48px;
-  font-size: 4rem;
+  height: 50px;
+  width: 50px;
+  font-size: 3rem;
   color: red;
   border: none;
-
 
 }
 .dislike:hover {
@@ -475,14 +512,16 @@ img {
 }
 
 .name{
+  width: 90%;
   display: flex;
   flex-direction: row;
   align-items: center;
   margin-top: 5%;
   margin-bottom: 5%;
-  gap: 3%;
+  gap: 5%;
 }
 .sic {
+  width: 90%;
   display: flex;
   flex-direction: row;
   align-items: center;
@@ -491,6 +530,7 @@ img {
   gap: 5%;
 }
 .price {
+  width: 90%;
   display: flex;
   flex-direction: row;
   align-items: center;
