--- a/connor-andre-phase2-project/src/Components/index.css
+++ b/connor-andre-phase2-project/src/Components/index.css
@@ -333,6 +333,12 @@ img {
   align-items: center;
   justify-content: center;
   width: 100%;
+  border:#f4f3f3 solid;
+  box-shadow: 0 2px 6px 0 rgba(205, 33, 17, 0.14);
+  border-width: thin;
+  border-radius: 20px;
+  background-color: white;
+
 }
 
 .metrics {
@@ -350,6 +356,11 @@ img {
   margin-top: -5%;
   margin-bottom: 5%;
 }
+
+/* .graph-stuff {
+  display: flex;
+  flex-direction: column;
+} */
 
 .back-button {
   align-items: center;
